--- a/summary/index.html
+++ b/summary/index.html
@@ -8,7 +8,7 @@ title: Case summary
 
   {% include sidenav.html %}
 
-  <main id="content" class="main container-fluid mt-5 px-6 px-lg-8">
+  <main id="content" class="main container-fluid mt-5 px-6 px-lg-8 table-no-case">
     <div class="row">
       <div class="col">
 
@@ -32,7 +32,7 @@ title: Case summary
         </div> -->
 
         <div class="callout callout-info">
-          <p>An EHC needs assessment is in progress under Section 36 (1) of the Children and Families Act 2014. Please ensure that all relevant professional contributors have been requested to provide advice and the family have appropriate support in place to complete the "About me" and "Parent/carer's views". A decision to issue an EHC Plan or not is due by <strong>14 Jan 2023</strong>.</p>
+          <p>An EHC needs assessment is in progress under Section 36 (1) of the Children and Families Act 2014. Please ensure that all relevant professional contributors have been requested to provide advice and the family have appropriate support in place to complete "About me" and "Parent/carer's views". A decision to issue an EHC Plan or not is due by <strong>14 Jan 2023</strong>.</p>
           <div class="mt-2"><a href="/case-view/assessment-alternate" class="btn btn-neutral-50"><i class="fal fa-arrow-circle-right me-2" aria-hidden="true"></i>View assessment</a></div>
         </div>
 
