--- a/work-tray/index.html
+++ b/work-tray/index.html
@@ -9,7 +9,7 @@ title: Work tray
   {% include sidenav.html %}
 
   <main id="content" class="main container-fluid mt-6 px-6 px-lg-8 table-no-case">
-    <div class="row gx-5 gy-2 px-xl-5">
+    <div class="row">
       <div class="col">
         <h1>My cases in progress</h1>
         <p>My assigned children and young people in the assessment, review or amendment pathway.</p>
@@ -26,13 +26,13 @@ title: Work tray
                  <thead>
                    <tr>
                      <th scope="col" class="d-none d-md-table-cell">Photo</th>
-                     <th scope="col">Name <i class="fal fa-arrow-up idx-table-sort px-1" aria-hidden="true" title="Sort"></i></th>
-                     <th scope="col" class="d-none d-md-table-cell">Case ID</th>
-                     <th scope="col" class="d-none d-md-table-cell">Year group</th>
+                     <th scope="col">Name<i class="fa fa-sort ms-1"></i></th>
+                     <th scope="col" class="d-none d-md-table-cell">Case ID<i class="fa fa-sort ms-1"></i></th>
+                     <th scope="col" class="d-none d-md-table-cell">Year<i class="fa fa-sort ms-1"></i></th>
                      <th scope="col">Setting</th>
-                     <th scope="col">Status</th>
-                     <th scope="col" class="d-none d-md-table-cell">Next due</th>
-                     <th scope="col" class="d-none d-md-table-cell">Last updated</th>
+                     <th scope="col">Status<i class="fa fa-sort ms-1"></i></th>
+                     <th scope="col" class="d-none d-md-table-cell">Next due<i class="fa fa-sort ms-1"></i></th>
+                     <th scope="col" class="d-none d-md-table-cell">Updated<i class="fa fa-sort ms-1"></i></th>
                      <th scope="col" class="d-none d-md-table-cell">Alert</th>
                    </tr>
                  </thead>
@@ -50,7 +50,7 @@ title: Work tray
                    </tr>
                    <tr>
                      <td class="d-none d-md-table-cell"><img src="/assets/images/boy running.jpg" class="rounded d-block idx-avatar-card" alt="Photo of Ellery"></td>
-                     <td><a href="/case-view">Holden, Ellery</a></td>
+                     <td><a href="#">Holden, Ellery</a></td>
                      <td class="d-none d-md-table-cell">EHC/21/0123</td>
                      <td class="d-none d-md-table-cell">Year 4</td>
                      <td>Oak Junior School</td>
@@ -87,7 +87,7 @@ title: Work tray
                    </tr>
                    <tr>
                      <td class="d-none d-md-table-cell"><img src="/assets/images/placeholder.jpeg" class="rounded d-block idx-avatar-card" alt="Photo of Victor"></td>
-                     <td><a href="/case-view/views">Wagner, Victor</a></td>
+                     <td><a href="#">Wagner, Victor</a></td>
                      <td class="d-none d-md-table-cell">EHC/21/0123</td>
                      <td class="d-none d-md-table-cell">Year 11</td>
                      <td>Greenhill School</td>
