Updated breadcrumb alignment for mobile

--- a/case-view/timeline-alternate.html
+++ b/case-view/timeline-alternate.html
@@ -16,7 +16,7 @@ title: EHC Hub
 
         <hr>
 
-        <div class="d-flex justify-content-between text-neutral-500">
+        <div class="d-flex flex-column flex-md-row justify-content-md-between text-neutral-600">
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb mb-0">
               <li class="breadcrumb-item"><a href="/summary">Case home</a></li>
