--- a/summary/index.html
+++ b/summary/index.html
@@ -16,7 +16,7 @@ title: Case summary
 
         <hr>
 
-        <div class="d-flex justify-content-between text-neutral-600">
+        <div class="d-flex flex-column flex-md-row justify-content-md-between text-neutral-600">
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb mb-0">
               <li class="breadcrumb-item active" aria-current="page">Case home</li>
@@ -390,7 +390,7 @@ title: Case summary
     <div class="row mt-5">
       <div class="col">
 
-        <div class="d-flex flex-column align-items-start flex-md-row justify-content-md-end">
+        <div class="d-flex flex-column flex-md-row justify-content-md-end">
           <a href="#" class="btn btn-neutral-50 me-auto mb-2 mb-md-0 me-md-0 ms-md-2"><i class="fal fa-eye-slash me-2" aria-hidden="true"></i>Unhide cards</a>
           <a href="#" class="btn btn-neutral-50 me-auto mb-2 mb-md-0 me-md-0 ms-md-2"><i class="fal fa-undo-alt me-2" aria-hidden="true"></i>Reset card order</a>
         </div>
