--- a/case-view/assessment-alternate.html
+++ b/case-view/assessment-alternate.html
@@ -64,7 +64,7 @@ title: EHC Hub
                  <td><span class="badge text-bg-warning w-100">Pending</span></td>
                  <td class="text-center">
                    <div class="dropdown dropstart">
-                     <a href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                     <a class="px-2" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                        <i class="fal fa-ellipsis-v-alt"></i>
                      </a>
                      <ul class="dropdown-menu">
@@ -84,7 +84,7 @@ title: EHC Hub
                  <td><span class="badge text-bg-danger w-100">Closed</span></td>
                  <td class="text-center">
                    <div class="dropdown dropstart">
-                     <a href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                     <a class="px-2" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                        <i class="fal fa-ellipsis-v-alt"></i>
                      </a>
                      <ul class="dropdown-menu">
@@ -104,7 +104,7 @@ title: EHC Hub
                  <td><span class="badge text-bg-success w-100">Completed</span></td>
                  <td class="text-center">
                    <div class="dropdown dropstart">
-                     <a href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                     <a class="px-2" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                        <i class="fal fa-ellipsis-v-alt"></i>
                      </a>
                      <ul class="dropdown-menu">
@@ -125,7 +125,7 @@ title: EHC Hub
                  <td><span class="badge text-bg-warning w-100">Pending</span></td>
                  <td class="text-center">
                    <div class="dropdown dropstart">
-                     <a href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                     <a class="px-2" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                        <i class="fal fa-ellipsis-v-alt"></i>
                      </a>
                      <ul class="dropdown-menu">
@@ -144,7 +144,7 @@ title: EHC Hub
                  <td><span class="badge text-bg-warning w-100">Pending</span></td>
                  <td class="text-center">
                    <div class="dropdown dropstart">
-                     <a href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                     <a class="px-2" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                        <i class="fal fa-ellipsis-v-alt"></i>
                      </a>
                      <ul class="dropdown-menu">
@@ -163,7 +163,7 @@ title: EHC Hub
                  <td><span class="badge text-bg-success w-100">Completed</span></td>
                  <td class="text-center">
                    <div class="dropdown dropstart">
-                     <a href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                     <a class="px-2" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                        <i class="fal fa-ellipsis-v-alt"></i>
                      </a>
                      <ul class="dropdown-menu">
@@ -184,7 +184,7 @@ title: EHC Hub
                  <td><span class="badge text-bg-success w-100">Completed</span></td>
                  <td class="text-center">
                    <div class="dropdown dropstart">
-                     <a href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                     <a class="px-2" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                        <i class="fal fa-ellipsis-v-alt"></i>
                      </a>
                      <ul class="dropdown-menu">
